--- a/client/index.html
+++ b/client/index.html
@@ -14,24 +14,24 @@ gtag('config', 'UA-117115842-1');
 <link rel="stylesheet" href="https://ngekoding.github.io/assets/css/main.css?v=20200314" type="text/css">
 <link rel="shortcut icon" href="https://ngekoding.github.io/assets/images/favicon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="Aldo Pratama"><meta name="description" content="Aldo Pratama Pelajar berumur 20 tahun yang selalu belajar hal baru.">
+<meta name="author" content="Mitsu Gans"><meta name="description" content="Ngoding Adalah Hobby ku.">
 <meta name="keywords" content="personal, portfolio, web design, developer">
 </head>
   <body>
     <div class="overlay">
-    </div><span class="greetings">Yaelahdo</span>
-    <span class="personal-info"><div class="name">Aldo Pratama</div>
+    </div><span class="greetings">MitsuGans</span>
+    <span class="personal-info"><div class="name">Mitsu Gans</div>
       <div class="passion">Fullstack Developer</div><ul class="social-links">
       <li><a href="https://github.com/pakforlay" target="_blank">
-      <img src="https://ngekoding.github.io/assets/icons/github.svg"></a></li><li><a href="https://facebook.com/pakforlay" target="_blank">
-      <img src="https://ngekoding.github.io/assets/icons/facebook.svg"></a></li><li><a href="https://wa.me/6287880001337" target="_blank">
+      <img src="https://ngekoding.github.io/assets/icons/github.svg"></a></li><li><a href="https://facebook.com/Mitsu Gans" target="_blank">
+      <img src="https://ngekoding.github.io/assets/icons/facebook.svg"></a></li><li><a href="https://wa.me/6285240750713" target="_blank">
       <img src="https://ngekoding.github.io/assets/icons/whatsapp.svg"></a></li></ul></span><div class="container">
-    <div class="welcome-message">Ya Allah . . .<br><span class="colored typed">
-      <div class="welcome-message">Aku Menyukai<br><span class="colored typed">
-        <div class="welcome-message">Salah Satu<br><span class="colored typed">
-          <div class="welcome-message">(Teman Dekat) di Instagram<br><span class="colored typed">
+    <div class="welcome-message">Hi<br><span class="colored typed">
+      <div class="welcome-message">Moshi Moshi<br><span class="colored typed">
+        <div class="welcome-message">I'M Mitsu Gans<br><span class="colored typed">
+          <div class="welcome-message">:v<br><span class="colored typed">
       </span>
     </div>
     </div>
   </body>
-  <script src="https://raw.githubusercontent.com/pakforlay/personal-api/master/client/script.js"></script></html>
+  <script src="https://raw.githubusercontent.com/MitsuGans/Api/main/client/script.js"></script></html>
