--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@ gtag('config', 'UA-117115842-1');
     </div><span class="greetings">MitsuGans</span>
     <span class="personal-info"><div class="name">Mitsu Gans</div>
       <div class="passion">Fullstack Developer</div><ul class="social-links">
-      <li><a href="https://github.com/pakforlay" target="_blank">
+      <li><a href="https://github.com/MitsuGans" target="_blank">
       <img src="https://ngekoding.github.io/assets/icons/github.svg"></a></li><li><a href="https://facebook.com/Mitsu Gans" target="_blank">
       <img src="https://ngekoding.github.io/assets/icons/facebook.svg"></a></li><li><a href="https://wa.me/6285240750713" target="_blank">
       <img src="https://ngekoding.github.io/assets/icons/whatsapp.svg"></a></li></ul></span><div class="container">
